Agregue desarrollo de Galeria

--- a/servicios.html
+++ b/servicios.html
@@ -25,6 +25,8 @@
 
 
 </header>
+
+<! ––desarrollo galeria de tendencias––>
 <h3>Galeria de tendencias</h3>
 <section class="Galeria">
     <div class="item item1"></div>
@@ -37,8 +39,7 @@
     <div class="item item8"></div>
 
 </section>
-
-
+<! ––desarrollo galeria de tendencias––>
 
  
 <section>
