--- a/blog.html
+++ b/blog.html
@@ -25,6 +25,33 @@
 
 </header>
 
+<! ––desarrollo de polaroid ––>
+
+<section class="polaroid-gallery">
+    <h1 class="polaroid-gallery__title">Polaroid image Gallery</h1>
+    <figure class="polaroid-card">
+     <img src="multimedia/persona1.jpg" width="300px" height="400px" alt="persona">
+     <figcaption>Miss Inglaterra</figcaption>
+    </figure>
+    <figure class="polaroid-card">
+        <img src="multimedia/persona2.jpg" width="300px" height="400px" alt="persona">
+        <figcaption>Miss Argentina</figcaption>
+       </figure>
+       <figure class="polaroid-card">
+        <img src="multimedia/persona3.jpg" width="300px" height="400px" alt="persona">
+        <figcaption>Miss Italia</figcaption>
+       </figure>
+       <figure class="polaroid-card">
+        <img src="multimedia/persona5.jpg" width="300px" height="400px" alt="persona">
+        <figcaption>Director</figcaption>
+       </figure>
+</section>
+
+<script src="js/main.js"></script>
+
+<! ––desarrollo de polaroid ––>
+
+
 
 <section>
     <p> <strong>Lorem Ipsum</strong>  is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
