--- a/contacto.html
+++ b/contacto.html
@@ -17,7 +17,7 @@
   <h2>Contacto</h2>
   <header>
     <! ––desarrollo de barra nav ––>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Bienvenidos</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
@@ -42,19 +42,12 @@
                 <a class="nav-link" href="blog.html">Blog</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="tienda.html">Tienda</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                  aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Separated link</a>
-                </div>
-              </li>
+  
             </ul>
             <form class="d-flex">
               <input class="form-control me-sm-2" type="text" placeholder="Search">
@@ -72,10 +65,10 @@
 
   <div class="content">
 
-    <h1 class="logo"><span>Contacto Argentina</span></h1>
+    <h1 class="logo__span"><span>Contacto Argentina</span></h1>
 
     <div class="contact-wrapper animated bounceInUp">
-      <div class="contact-form">
+      <div class="contact-form__form">
         <h3>Tomamos su pedido</h3>
         <form action="">
           <p>
