ultimo desarrollo con SCSS

--- a/contacto.html
+++ b/contacto.html
@@ -42,9 +42,6 @@
                 <a class="nav-link" href="blog.html">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="tienda.html">Tienda</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
   
@@ -65,10 +62,10 @@
 
   <div class="content">
 
-    <h1 class="logo__span"><span>Contacto Argentina</span></h1>
+    
 
     <div class="contact-wrapper animated bounceInUp">
-      <div class="contact-form__form">
+      <div class="contact-form">
         <h3>Tomamos su pedido</h3>
         <form action="">
           <p>
