--- a/servicios.html
+++ b/servicios.html
@@ -10,6 +10,14 @@
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
+    <title>Moda pret a porter</title>
+
+    <meta name="Servicios de moda"
+    content="nuestras tendencias">
+ 
+    <meta name="confeccion pret a porte"
+    content="HTML, ASP, diseñadores, confección,inglaterra, argentina,italia, director, vestuario,casual,accesorios, otoño, invierno,tendencia,moda 2022">
+
 </head>
 
 <body>
@@ -42,9 +50,6 @@
                                 <a class="nav-link" href="blog.html">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="tienda.html">Tienda</a>
-                              </li>
-                            <li class="nav-item">
                                 <a class="nav-link" href="contacto.html">Contacto</a>
                             </li>
                             
@@ -63,7 +68,7 @@
     </header>
 
     <! ––desarrollo galeria de tendencias––>
-        <h3>Galeria de tendencias</h3>
+      <h3>Galeria de tendencias </h3>
         <section class="Galeria">
             <div class="item item1"></div>
             <div class="item item2"></div>
