--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera web</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
         <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
-    <link rel="stylesheet" href="./SASS/estilos.css">
+    <link rel="stylesheet" href="SASS/estilos.css">
+    <link rel="stylesheet" href="css/font-awesome.css">
+    <title>Tu moda on-line</title>
+
+    <meta name="moda on line"
+    content="moda otoño invierno">
+ 
+    <meta name="moda, tendencia 2022"
+    content="HTML, ASP, JS, vestuario, pret a porte, tendencia, 2022">
+ 
 
 </head>
 
 <body>
-    <h2>Mi primera idea web</h2>
+   
 
 
     <header>
@@ -41,9 +49,6 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="tienda.html">Tienda</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="contacto.html">Contacto</a>
@@ -100,8 +105,8 @@
 <footer><br>
     2022 mi primera web todos los derechos reservados
     <br>
-    <div class="redes">
-        <i class="fa-brands fa-facebook"></i>
+    <div div="redes">
+        <i class="fa-facebook-square"></i>
         <i class="fa-brands fa-instagram"></i>
         <i class="fa-brands fa-twitter"></i>
 
