Ultimo desarrollo entrega final

--- a/servicios.html
+++ b/servicios.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera web</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
@@ -16,7 +15,7 @@
     content="nuestras tendencias">
  
     <meta name="confeccion pret a porte"
-    content="HTML, ASP, diseñadores, confección,inglaterra, argentina,italia, director, vestuario,casual,accesorios, otoño, invierno,tendencia,moda 2022">
+    content="HTML, ASP, diseñadores, confección, vestuario,casual,accesorios, otoño, invierno,tendencia,moda 2022">
 
 </head>
 
