--- a/home.html
+++ b/home.html
@@ -5,12 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primera web</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Bienvenidos a mundo moda</title>
+
+    <meta name="moda 2022"
+    content="desfile otoño invierno">
+ 
+    <meta name="moda, tendencia 2022"
+    content="HTML, ASP, JS, vestuario, pret a porte, otoño, invierno,tendencia, 2022">
 </head>
 
 <body>
